# CMakeInstallZbar

./: CMakeLists.txt  README.md
zbar/: CMakeLists.txt  svg.c  svg.h
zbar/decoder/: CMakeLists.txt
zbar/video/: CMakeLists.txt
